# pqs

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  x.txt
.claude/: ralph-loop.local.md  settings.json
bridge/: PROTOCOL.md  README.md  append_turn.sh  claude-codex-bridge.md
config/: acceptance.yaml  backtest.yaml  cost_model.yaml  cross_ticker_rules.yaml  evaluation_policy.yaml  events.yaml  executable_universe.yaml  fleet.yaml  ml_allocation.yaml  ml_feature_prep.yaml  ml_labeling.yaml  ml_sources.yaml  notify.yaml  production_strategy.yaml  regime.yaml  reporting.yaml  research_mask.yaml  risk.yaml  sector_map.yaml  swing_structure.yaml  system.yaml  temporal_split.yaml  temporal_split_v2.yaml  temporal_split_v3.yaml  universe.yaml  universe_expanded_v1.yaml  universe_expanded_v2.yaml  universe_priority5.yaml
core/: logging_setup.py
dev/: README.md  deep-research-report.md
docs/: 20260420-prd_intraday_mining_loop.md  20260420-prd_llm_factor_mining.md  20260420-ralph_loop_log.md  20260420-ralph_loop_prompt.md  20260421-llm_external_llm_handoff.md  20260421-llm_funnel_checklist.md  20260421-llm_phase_blocker_report.md  20260421-llm_proposal_prompt_template.md  20260421-llm_proposal_seed_context.md  20260421-prd_deep_mining_50round.md  20260421-prd_framework_completion.md  20260421-prd_universe_expanded_mining.md  20260421-promotion_flow.md  20260421-ralph_loop_universe_mining_state_reconstructed.md  20260421-transformer_research_phase1_findings.md  20260421-universe_expansion_spec_v2_2.md  (+59 more)
(+1498 files in other folders)
