[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqs"
version = "0.1.0"
description = "Personal Quant System — long-only, no-margin, no-short"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "yfinance>=0.2.40",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.9.0",
    "pandas-market-calendars>=4.3.0",
    "xgboost>=2.0.0",
    "optuna>=3.6.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "apscheduler>=3.10.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
research = [
    "lightgbm>=4.0.0",
    "scikit-learn>=1.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
